src/objects/Apttus_Config2__IncentiveSystemProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Incentive System Properties</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the setting is active</description>
        <inlineHelpText>Indicates whether the setting is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowUserOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether user override is allowed for promotions</description>
        <inlineHelpText>Indicates whether user override is allowed for promotions</inlineHelpText>
        <label>Allow User Override ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BenefitDimensionAllowMultiple__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether coupons are displayed for the incentive</description>
        <inlineHelpText>Indicates whether benefit dimension inputs should allow multiple selection or not.</inlineHelpText>
        <label>Benefit Dimension Allow Multiple</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContextType__c</fullName>
        <defaultValue>&quot;Order Line Item&quot;</defaultValue>
        <description>The type of context associated with the incentive. Valid values are :

Line Item
Order Line Item
External Order Summary Item
Milestone</description>
        <inlineHelpText>The type of context associated with the incentive. Valid values are :

Line Item
Order Line Item
External Order Summary Item
Milestone</inlineHelpText>
        <label>Context Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisallowNegativeLoyaltyPointsBalance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether negative loyalty points balance should be disallowed</description>
        <inlineHelpText>Indicates whether negative loyalty points balance should be disallowed</inlineHelpText>
        <label>Disallow Negative Loyalty Points Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayCoupons__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether coupons are displayed for the incentive</description>
        <inlineHelpText>Indicates whether coupons are displayed for the incentive</inlineHelpText>
        <label>Display Coupons ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnforceLimits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether incentive limits will be enforced when the cart is finalized</description>
        <inlineHelpText>Indicates whether incentive limits will be enforced when the cart is finalized</inlineHelpText>
        <label>Enforce Limits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyLevelUpdateFrequency__c</fullName>
        <defaultValue>&quot;Auto&quot;</defaultValue>
        <description>Indicates the how updates to loyalty levels should be handled. Valid values are:

Auto
OnDemand

The default value is Auto</description>
        <inlineHelpText>Indicates the how updates to loyalty levels should be handled. Valid values are:

Auto
OnDemand

The default value is Auto</inlineHelpText>
        <label>Loyalty Level Update Frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyOrderBatchSize__c</fullName>
        <defaultValue>250</defaultValue>
        <description>The order batch size for loyalty point calculation. The default value is 250. The SFDC governor limit affects the batch size.</description>
        <inlineHelpText>The order batch size for loyalty point calculation. The default value is 250. The SFDC governor limit affects the batch size.</inlineHelpText>
        <label>Loyalty Order Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupPeriodSource__c</fullName>
        <description>Indicates the source field in the context object which determines the rollup period</description>
        <inlineHelpText>Indicates the source field in the context object which determines the rollup period</inlineHelpText>
        <label>Rollup Period Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <defaultValue>&quot;Rebate&quot;</defaultValue>
        <description>The incentive use type. Valid Values are:

Promotion
Rebate
Milestone Incentive</description>
        <inlineHelpText>The incentive use type. Valid Values are:

Promotion
Rebate
Milestone Incentive</inlineHelpText>
        <label>Application Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Incentive System Properties</label>
</CustomObject>